Fix the horizontal scroll

--- a/style/main.css
+++ b/style/main.css
@@ -47,6 +47,7 @@ body {
 
 .row {
     padding: 3%;
+    max-width: max-content;
 }
 
 .row::after{
@@ -114,9 +115,9 @@ h1::after, h2::after, h3::after, h4::after, h5::after, h6::after {
 
 code {
     background-color: rgba(52, 61, 66, 0.541);
-    border-radius: 10px;
-    padding-left: 5px;
-    padding-right: 5px;
+    border-radius: 0.5vw;
+    padding-left: 0.4vw;
+    padding-right: 0.4vw;
 }
 
 a {
